fix(frontend/settings): remove extra padding
Removes unnecessary padding at the end of setting tab
Fixes #433

--- a/app/frontend/src/Settings/index.css
+++ b/app/frontend/src/Settings/index.css
@@ -69,6 +69,11 @@
   color: var(--settings-text-color) !important;
 }
 
+.settings .MuiList-padding {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .settings main .option {
   padding: 0 1em;
   min-height: 3em;
